--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 
-0.04    ...
-        - ...
+0.04    Thu Aug  9 20:56:14 CEST 2007
+        - Automatically set strict and warnings like Moose does
 
 0.03    Thu Aug  9 14:41:58 CEST 2007
         - Minor POD typo correction
