--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for MooseX-Types
 
+0.17    Tue Aug 18 02:32:31 EDT 2009
         - Documentation typo fix (Dave Rolsky).
         - Stop blowing up in has_available_type_export if the introspected code
           symbol exists but is not a type export (Florian Ragwitz).
