--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for MooseX-Types
 
+0.21
+        - Attempting to import a non-existent type from a combined type
+          library gave a very confusing error message from the
+          MooseX::Types::Combined internals. Now it gives you a much more
+          useful message. (Dave Rolsky)
+
 0.20    Thu Sep 10 22:34:48 EDT 2009
         - fix "empty export" warning (doy).
 
