--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for MooseX-Types
 
-        - Update docs to mention MRO::Compat rather than Class::C3
+0.22    Tue Jun  1 20:10:12 CEST 2010
+        - Update docs to mention MRO::Compat rather than Class::C3.
         - Added '0+' overloading to solve the type constraint equality
           regression introduced when Moose 1.05 tightened the rules
           determing type constraint equality.  Added tests for the
