--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for MooseX-Types
 
+0.24
+        - Avoid more warnings from Moose 1.09 in tests (Dave Rolsky).
+
 0.23    Tue Jul 20 02:18:37 CEST 2010
         - Avoid warnings from Moose 1.09 in tests (Dave Rolsky).
 
