Changes for MX::Types::Combine

--- a/Changes
+++ b/Changes
@@ -4,6 +4,11 @@ NEXT
         - The test suite now uses Test::Fatal instead of Test::Exception
           (Karen Etheridge).
 
+        - MooseX::Types::Combine is a little more efficient, and only tries to
+          load the libraries it's combining when that list is set. It also
+          checks that each lib in the list actually provides types. (Dave
+          Rolsky).
+
 0.24    Sat Sep 11 19:59:18 CEST 2010
         - Avoid more warnings from Moose 1.09 in tests (Dave Rolsky).
 
