--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for MooseX-Types
 
+{{$NEXT}}
+
+        - Small changes for forward compatibility with Moose 2.0100, when it
+          is released. (Dave Rolsky)
+
 0.25    2010-11-30
         - The test suite now uses Test::Fatal instead of Test::Exception
           (Karen Etheridge).
