--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - fixed failing tests on 5.8.5 due to incorrect == overload
+        (RT#77100, Graham Knop)
 
 0.35    2012-05-19
 
