--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - removed use of deprecated Class::MOP::load_class
 
 0.36    2013-06-22 13:51:54 PDT-0700 (Karen Etheridge)
         - fixed failing tests on 5.8.5 due to incorrect == overload
