--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for MooseX-Types
 
 {{$NEXT}}
         - removed use of deprecated Class::MOP::load_class
+        - repository has moved to the GitHub Moose organization
 
 0.36    2013-06-22 13:51:54 PDT-0700 (Karen Etheridge)
         - fixed failing tests on 5.8.5 due to incorrect == overload
