enum(@array) was also deprecated in Moose-2.1100

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - removed use of deprecated enum syntax
 
 0.37      2013-09-08 21:58:26Z (Karen Etheridge)
         - removed use of deprecated Class::MOP::load_class
