FIXED: install generated subs as methods
This replaces changes made in 0.40 that were then reverted in 0.41.
Now ensuring both:
- the declaring class has its type subs installed as methods
- the importing class does *not* also get methods installed

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - declared (not imported) types are now properly installed into the
+          proper package, so they survive namespace::autoclean (fixed this
+          time)
 
 0.41      2013-12-21 17:21:41Z
         - reversed changes in 0.40, until compatibility issues with older
