--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - line numbers in shipped code are now almost the same (within 3) as
+          the repository source, for easier debugging
 
 0.42      2014-01-04 23:31:58Z (TRIAL RELEASE)
         - declared (not imported) types are now properly installed into the
