Omitted failing tests as needed
Moose 2.1004 and earlier was not capable of installing blessed subs as
methods (fixed in commit d97927eb). This caused some tests to fail, e.g.:

http://www.cpantesters.org/cpan/report/affa9771-7d29-1014-8c3f-31d95cf4dae8
http://www.cpantesters.org/cpan/report/eccd4cf5-6bfd-1014-9efb-3395db05e747

--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ Revision history for MooseX-Types
 {{$NEXT}}
         - line numbers in shipped code are now almost the same (within 3) as
           the repository source, for easier debugging
+        - skipped new namespacing tests that fail with older Moose versions,
+          due to an inability to install blessed subs
 
 0.42      2014-01-04 23:31:58Z (TRIAL RELEASE)
         - declared (not imported) types are now properly installed into the
