--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for MooseX-Types
 
 {{$NEXT}}
+        - full respect for namespaces: declared types are now properly
+          installed into the proper package, so they survive
+          namespace::autoclean; however, types imported from the declaration
+          class are still properly cleaned by namespace::autoclean (as
+          implemented in trial versions 0.40-0.43)
 
 0.43      2014-01-17 01:25:55Z (TRIAL RELEASE)
         - line numbers in shipped code are now almost the same (within 3) as
