--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ MooseX::Types - Organise your Moose types in libraries
 
 =head1 VERSION
 
-version 0.45
+version 0.46
 
 =head1 SYNOPSIS
 
@@ -438,26 +438,19 @@ Many thanks to the C<#moose> cabal on C<irc.perl.org>.
 
 Robert "phaylon" Sedlacek <rs@474.at>
 
-=head1 COPYRIGHT AND LICENSE
-
-This software is copyright (c) 2007 by Robert "phaylon" Sedlacek.
-
-This is free software; you can redistribute it and/or modify it under
-the same terms as the Perl 5 programming language system itself.
-
 =head1 CONTRIBUTORS
 
-=for stopwords Dave Rolsky Karen Etheridge John Napiorkowski Robert 'phaylon' Sedlacek Rafael Kitover Florian Ragwitz Matt S Trout Hans Dieter Pearcey Jesse Luehrs Tomas Doran (t0m) matthewt Justin Hunter Kent Fredric Paul Fenwick Graham Knop
+=for stopwords Karen Etheridge Dave Rolsky John Napiorkowski Robert 'phaylon' Sedlacek Rafael Kitover Florian Ragwitz Matt S Trout Tomas Doran (t0m) Jesse Luehrs Hans Dieter Pearcey Graham Knop Paul Fenwick Kent Fredric Justin Hunter
 
 =over 4
 
 =item *
 
-Dave Rolsky <autarch@urth.org>
+Karen Etheridge <ether@cpan.org>
 
 =item *
 
-Karen Etheridge <ether@cpan.org>
+Dave Rolsky <autarch@urth.org>
 
 =item *
 
@@ -481,7 +474,7 @@ Matt S Trout <mst@shadowcat.co.uk>
 
 =item *
 
-Hans Dieter Pearcey <hdp@weftsoar.net>
+Tomas Doran (t0m) <bobtfish@bobtfish.net>
 
 =item *
 
@@ -489,19 +482,11 @@ Jesse Luehrs <doy@tozt.net>
 
 =item *
 
-Tomas Doran (t0m) <bobtfish@bobtfish.net>
+Hans Dieter Pearcey <hdp@weftsoar.net>
 
 =item *
 
-matthewt <matthewt@3efe9002-19ed-0310-8735-a98156148065>
-
-=item *
-
-Justin Hunter <justin.d.hunter@gmail.com>
-
-=item *
-
-Kent Fredric <kentfredric@gmail.com>
+Graham Knop <haarg@haarg.org>
 
 =item *
 
@@ -509,8 +494,19 @@ Paul Fenwick <pjf@perltraining.com.au>
 
 =item *
 
-Graham Knop <haarg@haarg.org>
+Kent Fredric <kentfredric@gmail.com>
+
+=item *
+
+Justin Hunter <justin.d.hunter@gmail.com>
 
 =back
+
+=head1 COPYRIGHT AND LICENSE
+
+This software is copyright (c) 2007 by Robert "phaylon" Sedlacek.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
 
 =cut
