increment $VERSION after 0.49 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for MooseX-Types
 
+{{$NEXT}}
+
 0.49      2016-12-23 00:12:12Z
         - made the exported is_Foo and to_Foo subs much faster, especially for
           type constraints which can be inlined. (Dave Rolsky)
