increment $VERSION after 0.50 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for MooseX-Types
 
+{{$NEXT}}
+
 0.50      2017-02-07 18:59:30Z
         - reverted the is_Fo and to_Foo refactoring again temporarily to
           resolve issues with Sub::Defer
