--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for MooseX-Types
 
 {{$NEXT}}
 
+        - re-added the is_Foo and to_Food refactoring after resolving
+          RT #119534
+
 0.50      2017-02-07 18:59:30Z
         - reverted the is_Foo and to_Foo refactoring again temporarily to
           resolve issues with Sub::Defer
@@ -9,7 +12,7 @@ Revision history for MooseX-Types
 0.49      2016-12-23 00:12:12Z
         - made the exported is_Foo and to_Foo subs much faster, especially for
           type constraints which can be inlined. (Dave Rolsky) [reverted in
-          0.50)
+          0.50]
 
 0.48      2016-12-07 01:15:14Z
         - reverted is_Foo and to_Foo refactoring [from 0.47] for now, so they
