increment $VERSION after 0.51 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for MooseX-Types
 
+{{$NEXT}}
+
 0.51      2025-04-19 18:55:03Z
         - use Sub::Util rather than Sub::Name, since Sub::Util is in core
 
