--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ MooseX::Types - Organise your Moose types in libraries
 
 =head1 VERSION
 
-version 0.50
+version 0.51
 
 =head1 SYNOPSIS
 
@@ -283,7 +283,7 @@ type does not yet exist.
 
 =head1 RECURSIVE SUBTYPES
 
-As of version 0.08, L<Moose::Types> has experimental support for Recursive
+As of version 0.08, L<MooseX::Types> has experimental support for Recursive
 subtypes.  This will allow:
 
     subtype Tree() => as HashRef[Str|Tree];
@@ -451,7 +451,7 @@ Robert "phaylon" Sedlacek <rs@474.at>
 
 =head1 CONTRIBUTORS
 
-=for stopwords Karen Etheridge Dave Rolsky John Napiorkowski Robert 'phaylon' Sedlacek Rafael Kitover Florian Ragwitz Matt S Trout Tomas Doran (t0m) Jesse Luehrs Mark Fowler Hans Dieter Pearcey Graham Knop Paul Fenwick Kent Fredric Justin Hunter
+=for stopwords Karen Etheridge Dave Rolsky John Napiorkowski Robert 'phaylon' Sedlacek Rafael Kitover Florian Ragwitz Matt S Trout Graham Knop Hans Dieter Pearcey Jesse Luehrs Mark Fowler Tomas Doran (t0m) Justin Hunter Kent Fredric Paul Fenwick Tadeusz Sośnierz
 
 =over 4
 
@@ -485,7 +485,11 @@ Matt S Trout <mst@shadowcat.co.uk>
 
 =item *
 
-Tomas Doran (t0m) <bobtfish@bobtfish.net>
+Graham Knop <haarg@haarg.org>
+
+=item *
+
+Hans Dieter Pearcey <hdp@weftsoar.net>
 
 =item *
 
@@ -497,15 +501,11 @@ Mark Fowler <mark@twoshortplanks.com>
 
 =item *
 
-Hans Dieter Pearcey <hdp@weftsoar.net>
+Tomas Doran (t0m) <bobtfish@bobtfish.net>
 
 =item *
 
-Graham Knop <haarg@haarg.org>
-
-=item *
-
-Paul Fenwick <pjf@perltraining.com.au>
+Justin Hunter <justin.d.hunter@gmail.com>
 
 =item *
 
@@ -513,7 +513,11 @@ Kent Fredric <kentfredric@gmail.com>
 
 =item *
 
-Justin Hunter <justin.d.hunter@gmail.com>
+Paul Fenwick <pjf@perltraining.com.au>
+
+=item *
+
+Tadeusz Sośnierz <tadeusz.sosnierz@onet.pl>
 
 =back
 
